- Got the network traffic monitoring page working. - Edited the controlpanel.conf appconfig file to get traffic monitoring working.

--- a/control_panel/controlpanel.conf
+++ b/control_panel/controlpanel.conf
@@ -3,7 +3,7 @@ tools.staticdir.root = "/srv/controlpanel"
 
 [/graphs]
 tools.staticdir.on = True
-tools.staticdir.dir = "graphs"
+tools.staticdir.dir = "/srv/controlpanel/graphs"
 
 [/graphics]
 tools.staticdir.on = True
