- Fixed the .SlackBuild script to create some directories that are ordinarily made by   the doinst.sh script (which doesn't get called when a .tgz is converted into an .xzm). - Fixed bugs in the nginx.conf script that I forgot to catch when I reverted a few of my   changes earlier.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/nginx/nginx.conf
+++ b/porteus/nginx/nginx.conf
@@ -1,5 +1,5 @@
 
-user  nginx;
+user  nobody;
 worker_processes  1;
 error_log  /dev/null crit;
 pid        /var/run/nginx.pid;
@@ -7,7 +7,6 @@ pid        /var/run/nginx.pid;
 events {
     worker_connections  512;
 }
-
 
 http {
     include       mime.types;
@@ -22,7 +21,6 @@ http {
 
     #keepalive_timeout  0;
     keepalive_timeout  65;
-
     #gzip  on;
 
     # HTTP server.
