- Fixed SSL support in nginx.conf. - Still shaking bugs out of the php.SlackBuild script.  Think my space bar is broken.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/nginx/nginx.conf
+++ b/porteus/nginx/nginx.conf
@@ -1,4 +1,3 @@
-
 user  nobody;
 worker_processes  1;
 error_log  /dev/null crit;
@@ -42,14 +41,14 @@ http {
             root   html;
         }
 
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        #location ~ \.php$ {
-        #    root           html;
-        #    fastcgi_pass   127.0.0.1:9000;
-        #    fastcgi_index  index.php;
-        #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-        #    include        fastcgi_params;
-        #}
+        # Pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
+        location ~ \.php$ {
+            root           /srv/nginx/root/;
+            fastcgi_pass   127.0.0.1:9000;
+            fastcgi_param  SCRIPT_FILENAME  /srv/nginx/root/$fastcgi_script_name;
+            fastcgi_param  PATH_INFO $fastcgi_script_name;
+            include        fastcgi_params;
+        }
     }
 
     # HTTPS server
@@ -70,6 +69,15 @@ http {
         location / {
             root   /srv/nginx/root/;
             index  index.html index.htm index.php;
+        }
+        
+        # Pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
+        location ~ \.php$ {
+            root           /srv/nginx/root/;
+            fastcgi_pass   127.0.0.1:9000;
+            fastcgi_param  SCRIPT_FILENAME  /srv/nginx/root/$fastcgi_script_name;
+            fastcgi_param  PATH_INFO $fastcgi_script_name;
+            include        fastcgi_params;
         }
     }
 
