- Commented out the auxilliary config file inclusions to make things easier. - Added a 'root' directive to the stanza which covers all URIs that include the regexp   /\.php/.  They need a 'root' directive to call home, which is why it kept 404'ing. - Added a 'fastcgi_split_path_info ^(.+\.php)(/.+)$;' at Chris' suggestion.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/nginx/nginx.conf
+++ b/porteus/nginx/nginx.conf
@@ -1,16 +1,17 @@
 user  nobody;
 worker_processes  1;
-error_log  /dev/null crit;
+#error_log  /dev/null crit;
+error_log  /tmp/nginx.error debug;
 pid        /var/run/nginx.pid;
 
 events {
     worker_connections  512;
-}
+    }
 
 http {
     include       mime.types;
     default_type  application/octet-stream;
-    access_log  off;
+    access_log  /tmp/nginx.access;
 
     sendfile        on;
     #tcp_nopush     on;
@@ -26,12 +27,12 @@ http {
         #charset koi8-r;
 
         location / {
-            root   /srv/nginx/root/;
+            root   /srv/nginx;
             index  index.html index.htm index.php;
-        }
+            }
 
         # This is where active web apps' config files go.
-        include	  apps/*.conf;
+        #include	  apps/*.conf;
     
         #error_page  404              /404.html;
 
@@ -39,17 +40,18 @@ http {
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
             root   html;
-        }
+            }
 
         # Pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        location ~ \.php$ {
-            root           /srv/nginx/root/;
-            fastcgi_pass   127.0.0.1:9000;
-            fastcgi_param  SCRIPT_FILENAME  /srv/nginx/root/$fastcgi_script_name;
-            fastcgi_param  PATH_INFO $fastcgi_script_name;
+        location ~ \.php {
+            root   /srv/nginx;
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;
             include        fastcgi_params;
+            fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+            fastcgi_intercept_errors on;
+            fastcgi_pass   127.0.0.1:9000;
+            }
         }
-    }
 
     # HTTPS server
     server {
@@ -67,21 +69,21 @@ http {
         #ssl_prefer_server_ciphers   on;
 
         location / {
-            root   /srv/nginx/root/;
+            root   /srv/nginx;
             index  index.html index.htm index.php;
-        }
+            }
         
         # This is where active web apps' config files go.
-        include	  apps/*.conf;
+        #include	  apps/*.conf;
     
         # Pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        location ~ \.php$ {
-            root           /srv/nginx/root/;
-            fastcgi_pass   127.0.0.1:9000;
-            fastcgi_param  SCRIPT_FILENAME  /srv/nginx/root/$fastcgi_script_name;
-            fastcgi_param  PATH_INFO $fastcgi_script_name;
+        location ~ \.php {
+            root   /srv/nginx;
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;
             include        fastcgi_params;
+            fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+            fastcgi_intercept_errors on;
+            fastcgi_pass   127.0.0.1:9000;
+            }
         }
     }
-
-}
