- Figured out how to keep theme-related elements of the status.net instance from   breaking.  tl;dr: configure the server to use a document root of /srv/nginx/microblog   whenever a subdirectory of http://localhost/microblog/ was referenced.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/nginx/nginx.conf
+++ b/porteus/nginx/nginx.conf
@@ -51,6 +51,20 @@ http {
             fastcgi_intercept_errors on;
             fastcgi_pass   127.0.0.1:9000;
             }
+
+        location ~* ^/microblog(.*)\.(ico|css|js|gif|png|jpg|bmp|JPG)$ {
+            root /srv/nginx/microblog;
+            rewrite ^/[^/]+/(.*)$ /microblog/$1 break;
+            }
+        location /theme {
+            root /srv/nginx/microblog;
+            }
+        location /plugins {
+            root /srv/nginx/microblog;
+            }
+        location /js {
+            root /srv/nginx/microblog;
+            }
         }
 
     # HTTPS server
