--- a/porteus/apache/httpd.conf
+++ b/porteus/apache/httpd.conf
@@ -99,7 +99,7 @@ LoadModule proxy_http_module lib/httpd/modules/mod_proxy_http.so
 LoadModule proxy_scgi_module lib/httpd/modules/mod_proxy_scgi.so
 LoadModule proxy_ajp_module lib/httpd/modules/mod_proxy_ajp.so
 LoadModule proxy_balancer_module lib/httpd/modules/mod_proxy_balancer.so
-#LoadModule ssl_module lib/httpd/modules/mod_ssl.so
+LoadModule ssl_module lib/httpd/modules/mod_ssl.so
 LoadModule mime_module lib/httpd/modules/mod_mime.so
 LoadModule dav_module lib/httpd/modules/mod_dav.so
 LoadModule status_module lib/httpd/modules/mod_status.so
@@ -447,7 +447,7 @@ DefaultType text/plain
 #Include /etc/httpd/extra/httpd-userdir.conf
 
 # Real-time info on requests and configuration
-#Include /etc/httpd/extra/httpd-info.conf
+Include /etc/httpd/extra/httpd-info.conf
 
 # Virtual hosts
 #Include /etc/httpd/extra/httpd-vhosts.conf
@@ -462,7 +462,7 @@ DefaultType text/plain
 #Include /etc/httpd/extra/httpd-default.conf
 
 # Secure (SSL/TLS) connections
-#Include /etc/httpd/extra/httpd-ssl.conf
+Include /etc/httpd/extra/httpd-ssl.conf
 #
 # Note: The following must must be present to support
 #       starting without SSL on platforms with no /dev/random equivalent
