- Added 'index.php' to the list of default index files that should be served.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/apache/httpd.conf
+++ b/porteus/apache/httpd.conf
@@ -228,7 +228,7 @@ DocumentRoot "/srv/httpd/htdocs"
 # is requested.
 #
 <IfModule dir_module>
-    DirectoryIndex index.html
+    DirectoryIndex index.html index.php
 </IfModule>
 
 #
@@ -480,4 +480,8 @@ Include /etc/httpd/mod_php.conf
 #
 #LoadModule dav_svn_module lib/httpd/modules/mod_dav_svn.so
 #LoadModule authz_svn_module lib/httpd/modules/mod_authz_svn.so
+
+# Include configuration files for all of the enabled web apps.  If none are enabled,
+# this directory will be empty so it'll be a NOP.
+Include /etc/httpd/enabled_apps/*.conf
 
