- Modified a bit so that Etherpad-Lite could use MySQL as its back-end and not files   full of JSON.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/mysql/my.cnf
+++ b/porteus/mysql/my.cnf
@@ -35,6 +35,7 @@ read_buffer_size = 256K
 read_rnd_buffer_size = 256K
 net_buffer_length = 2K
 thread_stack = 128K
+bind-address=127.0.0.1
 
 # Don't listen on a TCP/IP port at all. This can be a security enhancement,
 # if all processes that need to connect to mysqld run on the same host.
@@ -42,8 +43,8 @@ thread_stack = 128K
 # Note that using this option without enabling named pipes on Windows
 # (using the "enable-named-pipe" option) will render mysqld useless!
 # 
-skip-networking
-server-id	= 1
+#skip-networking
+#server-id	= 1
 
 # Uncomment the following if you want to log updates
 #log-bin=mysql-bin
