- Fixed glitches that a run of `ngircd -f ngircd.conf -t` detected in the config file. - Initial commit of the initscript.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/ngircd/ngircd.conf
+++ b/porteus/ngircd/ngircd.conf
@@ -106,7 +106,10 @@
 	# Note that the pidfile is written AFTER chroot and switching uid,
 	# i. e. the Directory the pidfile resides in must be writeable by
 	# the ngircd user and exist in the chroot directory.
-	PidFile = /var/run/ngircd.pid
+	#
+	# Note that this directory has to exist so that the daemon can write its PID
+	# file because it doesn't do that until after it drops its privileges.
+	PidFile = /var/run/ngircd/ngircd.pid
 
 	# After <PingTimeout> seconds of inactivity the server will send a
 	# PING to the peer to test whether it is alive or not.
