--- a/porteus/ngircd/ngircd.conf
+++ b/porteus/ngircd/ngircd.conf
@@ -139,7 +139,7 @@
 	;PredefChannelsOnly = no
 
 	# Don't do any DNS lookups when a client connects to the server.
-	NoDNS = no
+	NoDNS = yes
 
 	# Don't do any IDENT lookups, even if ngIRCd has been compiled
 	# with support for it.
