- The DHCP lease TTL has to be in seconds.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/dnsmasq/dnsmasq.conf
+++ b/porteus/dnsmasq/dnsmasq.conf
@@ -209,7 +209,7 @@ dhcp-option=vendor:MSFT,2,1i
 # do not cache further. If you are happy to trade lower load on the
 # server for potentially stale date, you can set a time-to-live (in
 # seconds) here.
-local-ttl=5m
+local-ttl=300
 
 # If you want dnsmasq to detect attempts by Verisign to send queries
 # to unregistered .com and .net hosts to its sitefinder service and
