- Changed the default log level to WARN.  Still deciding if editing the   initscript to run the output (by default, stderr) into /dev/null to speed   things up on poky little netbooks.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/etherpad-lite/settings.json
+++ b/porteus/etherpad-lite/settings.json
@@ -38,5 +38,5 @@
   "abiword" : null,
   
   /* The log level we are using, can be: DEBUG, INFO, WARN, ERROR */
-  "loglevel": "INFO"
+  "loglevel": "ERROR"
 }
