- Somehow the wrong php.ini file wound up in the repository.  Replaced it with a copy   that I've visually verified.  Why does Slackware put a php.ini file in /etc/httpd and   another in /etc/php???
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/php/etc/php/php.ini
+++ b/porteus/php/etc/php/php.ini
@@ -807,7 +807,6 @@ user_dir =
 ; extension_dir = "./"
 ; On windows:
 ; extension_dir = "ext"
-extension_dir = "/usr/lib/php/extensions"
 
 ; Whether or not to enable the dl() function.  The dl() function does NOT work
 ; properly in multithreaded servers, such as IIS or Zeus, and is automatically
@@ -840,7 +839,7 @@ enable_dl = Off
 ; of zero causes PHP to behave as before.  Default is 1.  You should fix your scripts
 ; to use SCRIPT_FILENAME rather than PATH_TRANSLATED.
 ; http://php.net/cgi.fix-pathinfo
-cgi.fix_pathinfo=0
+;cgi.fix_pathinfo=1
 
 ; FastCGI under IIS (on WINNT based OS) supports the ability to impersonate
 ; security tokens of the calling client.  This allows IIS to define the
@@ -939,6 +938,44 @@ default_socket_timeout = 60
 ; If you only provide the name of the extension, PHP will look for it in its
 ; default extension directory.
 ;
+
+; These are the extensions that are available for use on this PHP build.
+; If you do NOT need any of these extensions, you should comment them out.
+; That will probably increase both your security and performance.
+
+extension=bcmath.so
+extension=bz2.so
+extension=calendar.so
+extension=ctype.so
+extension=curl.so
+extension=dba.so
+;extension=enchant.so
+extension=exif.so
+extension=ftp.so
+extension=gd.so
+extension=gettext.so
+extension=gmp.so
+extension=iconv.so
+extension=ldap.so
+extension=mbstring.so
+extension=mysql.so
+extension=mysqli.so
+extension=openssl.so
+extension=pdo.so
+extension=pdo_mysql.so
+extension=pdo_sqlite.so
+extension=pspell.so
+extension=shmop.so
+;extension=snmp.so
+extension=soap.so
+extension=sqlite.so
+extension=sqlite3.so
+extension=tokenizer.so
+extension=wddx.so
+extension=xsl.so
+extension=zip.so
+extension=zlib.so
+
 ; Windows Extensions
 ; Note that ODBC support is built in, so no dll is needed for it.
 ; Note that many DLL files are located in the extensions/ (PHP 4) ext/ (PHP 5)
@@ -972,7 +1009,6 @@ default_socket_timeout = 60
 ;extension=php_pgsql.dll
 ;extension=php_pspell.dll
 ;extension=php_shmop.dll
-extension=gd.so
 
 ; The MIBS data available in the PHP distribution must be installed. 
 ; See http://www.php.net/manual/en/snmp.installation.php 
@@ -1477,7 +1513,7 @@ session.save_handler = files
 ; where MODE is the octal representation of the mode. Note that this
 ; does not overwrite the process's umask.
 ; http://php.net/session.save-path
-;session.save_path = "/tmp"
+session.save_path = "/var/lib/php"
 
 ; Whether to use cookies.
 ; http://php.net/session.use-cookies
