- Configured ifplugd to not consider an interface disconnected if it's unplugged for   less than 5 seconds, or connected if it's in for less than 2 seconds.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/ifplugd/etc/ifplugd/ifplugd.conf
+++ b/porteus/ifplugd/etc/ifplugd/ifplugd.conf
@@ -36,7 +36,7 @@ INTERFACES="eth0 eth1 eth2 eth3 eth4 eth5"
 
 # Additional parameters for ifplugd.
 # (Run "ifplugd -h" for further information.)
-ARGS="-fwI -u0 -d10 -r /usr/local/sbin/ethernet.py -M"
+ARGS="-fwI -u0 -d10 -r /usr/local/sbin/ethernet.py -M -d -u 2"
 
 # Additional parameters for ifplugd for the specified interface.  Note
 # that $ARGS is ignored, when a variable like this is set for an
