- If we're using a box with more than one Ethernet interface as a gateway, then   I have no idea what to do.  Removed all but eth0 from ifplugd.conf.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/ifplugd/etc/ifplugd/ifplugd.conf
+++ b/porteus/ifplugd/etc/ifplugd/ifplugd.conf
@@ -32,7 +32,7 @@
 # have loaded.
 # Because ifplugd will grab onto wireless interfaces as well, we can't trust the 'auto'
 # keyword.
-INTERFACES="eth0 eth1 eth2 eth3 eth4 eth5"
+INTERFACES="eth0"
 
 # Additional parameters for ifplugd.
 # (Run "ifplugd -h" for further information.)
