- Removed references to ethernet.py because I haven't written it yet.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/ifplugd/etc/ifplugd/ifplugd.conf
+++ b/porteus/ifplugd/etc/ifplugd/ifplugd.conf
@@ -36,7 +36,8 @@ INTERFACES="eth0"
 
 # Additional parameters for ifplugd.
 # (Run "ifplugd -h" for further information.)
-ARGS="-fwI -u0 -d10 -r /usr/local/sbin/ethernet.py -M -d -u 2"
+#ARGS="-fwI -u0 -d10 -r /usr/local/sbin/ethernet.py -M -d -u 2"
+ARGS="-fwI -u0 -d10 -M -d -u 2"
 
 # Additional parameters for ifplugd for the specified interface.  Note
 # that $ARGS is ignored, when a variable like this is set for an
