- Added static resource entires for the CSS in Laurelindel's control panel HTML   templates. - More tweaking of libevent.SlackBuild to try to fix the bad symlink libevemt.so.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/control_panel/etc/controlpanel/controlpanel.conf
+++ b/control_panel/etc/controlpanel/controlpanel.conf
@@ -9,3 +9,27 @@ tools.staticdir.dir = "/srv/controlpanel/graphs"
 tools.staticdir.on = True
 tools.staticdir.dir = "graphics"
 
+[/css]
+tools.staticdir.on = True
+tools.staticdir.dir = "css"
+
+[/gateways/css]
+tools.staticdir.on = True
+tools.staticdir.dir = "css"
+
+[/mesh/css]
+tools.staticdir.on = True
+tools.staticdir.dir = "css"
+
+[/network/css]
+tools.staticdir.on = True
+tools.staticdir.dir = "css"
+
+[/services/css]
+tools.staticdir.on = True
+tools.staticdir.dir = "css"
+
+[/traffic/css]
+tools.staticdir.on = True
+tools.staticdir.dir = "css"
+
