- Updated controlpanel.conf to take into account the new CSS.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/control_panel/etc/controlpanel/controlpanel.conf
+++ b/control_panel/etc/controlpanel/controlpanel.conf
@@ -3,33 +3,13 @@ tools.staticdir.root = "/srv/controlpanel"
 
 [/graphs]
 tools.staticdir.on = True
-tools.staticdir.dir = "/srv/controlpanel/graphs"
+tools.staticdir.dir = "graphs"
 
 [/graphics]
 tools.staticdir.on = True
 tools.staticdir.dir = "graphics"
 
 [/css]
-tools.staticdir.on = True
-tools.staticdir.dir = "css"
-
-[/gateways/css]
-tools.staticdir.on = True
-tools.staticdir.dir = "css"
-
-[/mesh/css]
-tools.staticdir.on = True
-tools.staticdir.dir = "css"
-
-[/network/css]
-tools.staticdir.on = True
-tools.staticdir.dir = "css"
-
-[/services/css]
-tools.staticdir.on = True
-tools.staticdir.dir = "css"
-
-[/traffic/css]
 tools.staticdir.on = True
 tools.staticdir.dir = "css"
 
