- Sweetspot requires that a filters/ directory be configured.  It's hardcoded   to look in /usr/local/etc/sweetspot by default, which doesn't exist in our   build.  So, the default config file has been uncommented and edited to look in   /etc/sweetspot/filters.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/sweetspot/etc/sweetspot/sweetspot.conf
+++ b/sweetspot/etc/sweetspot/sweetspot.conf
@@ -40,7 +40,7 @@ acct-detail-file /var/sweetspot/detail
 #acct-nas-ip-address 127.0.0.1
 
 # Packet filters directory
-#filter-dir /usr/local/etc/sweetspot/filters
+filter-dir /etc/sweetspot/filters
 
 # Captive filter
 #filter-anonymous anonymous
