Added a configuration option for DHCP option 252 (Web Proxy Detection).  This is for issue #91.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/dnsmasq/dnsmasq.conf
+++ b/porteus/dnsmasq/dnsmasq.conf
@@ -174,6 +174,12 @@ domain=byzantium.mesh
 # http://technet2.microsoft.com/WindowsServer/en/library/a70f1bb7-d2d4-49f0-96d6-4b7414ecfaae1033.mspx?mfr=true
 dhcp-option=vendor:MSFT,2,1i
 
+# Send a Microsoft-specific option for Windows 7.  Reading up on ticket #91,
+# Windows 7 requires a value of some kind for DHCP option 252 (Web Proxy Auto
+# Detection) or it'll likely ignore offered DHCP leases.  It's in the dnsmasq
+# FAQ.
+dhcp-option=252,"\n"
+
 # Set the limit on DHCP leases, the default is 150
 #dhcp-lease-max=150
 
