--- a/porteus/murmur/murmur.ini
+++ b/porteus/murmur/murmur.ini
@@ -10,7 +10,7 @@
 # Note that this is global (shared between all virtual servers), and that
 # it counts both successfull and unsuccessfull connection attempts.
 # Set either Attempts or Timeframe to 0 to disable.
-#autobanAttempts = 10
+autobanAttempts = 0
 #autobanTimeframe = 120
 #autobanTime = 300
 
@@ -65,7 +65,7 @@ database=/var/lib/mumble-server/mumble-server.sqlite
 
 # PIDfile to use
 # Leave blank to place pidfile in current directory
-pidfile=/var/run/mumble-server/mumble-server.pid
+pidfile=/var/run/mumble-server.pid
 
 # Murmur defaults to not using D-Bus. If you wish to use dbus, please
 # specify so here.
@@ -74,4 +74,4 @@ dbus=system
 
 # Murmur default to logging to murmur.log. If you leave this blank,
 # murmur will log to the console (linux) or through message boxes (win32).
-logfile=
+logfile=/dev/null
