Reading through the Murmur server admin's guide, changed a few things in the .ini file.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/murmur/murmur.ini
+++ b/porteus/murmur/murmur.ini
@@ -50,10 +50,10 @@ users=50
 # The URL is your own website, and only set the registerHostname for static IP
 # addresses.
 #
-registerName=Byzantium Mumble Network
+registerName=Byzantium
 registerPassword=
 registerUrl=http://byzantium.mesh/
-registerHostname=
+#registerHostname=
 
 # If you have a proper SSL certificate, you can provide the filenames here.
 sslCert=/etc/httpd/server.crt
