Added some comments to the top level Byzantium module building script.
Added some code to use a text file to determine which of the .xzm modules are
unpacked into the fakeroot.

Initial commit of reqired_packages.txt, the text file containing filenames of
modules to unpack into the fakeroot.

Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/murmur/murmur.ini
+++ b/porteus/murmur/murmur.ini
@@ -19,7 +19,7 @@ autobanAttempts = 0
 # configure it here than through DBus/SQL.
 #
 # Welcome message sent to users
-welcometext="<br />Welcome to the Byzantium Murmur network.<br />Watch your backs.<br />"
+welcometext="<br />Welcome to the Byzantium Murmur network.<br />Watch your back.<br />"
 
 # Port to bind TCP and UDP sockets to
 port=64738
