Changed the release code of Byzantium Linux to v0.2a.
Added the 'cp2ram' cheatcode to the boot stanzas to make it easier for people
to boot lots of nodes at a time for testing.

Commented out the 'cp2ram' stanza because they're all copy-to-RAM for this
release.

Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/remaster_iso/porteus.cfg
+++ b/remaster_iso/porteus.cfg
@@ -2,7 +2,7 @@ PROMPT 0
 TIMEOUT 90
 DEFAULT /boot/syslinux/vesamenu.c32
 MENU BACKGROUND /boot/byzantium.jpg
-MENU TITLE Byzantium v0.1a 32-bit
+MENU TITLE Byzantium v0.2a 32-bit
 
 MENU WIDTH 30
 MENU MARGIN 2
@@ -38,7 +38,8 @@ MENU VSHIFT 5
 LABEL xconf
 MENU LABEL Graphical mode (KDE)
 KERNEL /boot/vmlinuz
-APPEND initrd=/boot/initrd.xz vga=F00 autoexec=xconf;telinit~4 changes=/porteus/
+#APPEND initrd=/boot/initrd.xz vga=F00 autoexec=xconf;telinit~4 changes=/porteus/
+APPEND initrd=/boot/initrd.xz vga=F00 autoexec=xconf;telinit~4 changes=/porteus/ cp2ram
 TEXT HELP
     Run the default Byzantium
     desktop.  Try to autoconfigure
@@ -49,7 +50,8 @@ ENDTEXT
 LABEL lxde
 MENU LABEL Graphical mode (LXDE)
 KERNEL /boot/vmlinuz
-APPEND initrd=/boot/initrd.xz vga=F00 lxde autoexec=xconf;telinit~4 changes=/porteus/
+#APPEND initrd=/boot/initrd.xz vga=F00 lxde autoexec=xconf;telinit~4 changes=/porteus/
+APPEND initrd=/boot/initrd.xz vga=F00 lxde autoexec=xconf;telinit~4 changes=/porteus/ cp2ram
 TEXT HELP
     Run the lightweight Byzantium
     desktop (LXDE).
@@ -69,21 +71,23 @@ TEXT HELP
     or written to storage.
 ENDTEXT
 
-LABEL cp2ram
-MENU LABEL Copy To RAM
-KERNEL /boot/vmlinuz
-APPEND initrd=/boot/initrd.xz vga=F00 copy2ram autoexec=xconf;telinit~4
-TEXT HELP
-    Run Byzantium but first copy
-    everything to RAM to get a
-    huge speed increase (needs
-    >300MB RAM).
-ENDTEXT
+# Commented out because we're hardcoding cp2ram in this release.
+#LABEL cp2ram
+#MENU LABEL Copy To RAM
+#KERNEL /boot/vmlinuz
+#APPEND initrd=/boot/initrd.xz vga=F00 copy2ram autoexec=xconf;telinit~4
+#TEXT HELP
+#    Run Byzantium but first copy
+#    everything to RAM to get a
+#    huge speed increase (needs
+#    >300MB RAM).
+#ENDTEXT
 
 LABEL startx
 MENU LABEL VESA mode
 KERNEL /boot/vmlinuz
-APPEND initrd=/boot/initrd.xz autoexec=telinit~4 changes=/porteus/
+#APPEND initrd=/boot/initrd.xz autoexec=telinit~4 changes=/porteus/
+APPEND initrd=/boot/initrd.xz autoexec=telinit~4 changes=/porteus/ cp2ram
 TEXT HELP
     Run Byzantium's KDE desktop but
     don't autoconfigure the graphics
