The cheatcode is 'copy2ram', not 'cp2ram'.  Fail.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/remaster_iso/porteus.cfg
+++ b/remaster_iso/porteus.cfg
@@ -39,7 +39,7 @@ LABEL xconf
 MENU LABEL Graphical mode (KDE)
 KERNEL /boot/vmlinuz
 #APPEND initrd=/boot/initrd.xz vga=F00 autoexec=xconf;telinit~4 changes=/porteus/
-APPEND initrd=/boot/initrd.xz vga=F00 autoexec=xconf;telinit~4 changes=/porteus/ cp2ram
+APPEND initrd=/boot/initrd.xz vga=F00 autoexec=xconf;telinit~4 changes=/porteus/ copy2ram
 TEXT HELP
     Run the default Byzantium
     desktop.  Try to autoconfigure
@@ -51,7 +51,7 @@ LABEL lxde
 MENU LABEL Graphical mode (LXDE)
 KERNEL /boot/vmlinuz
 #APPEND initrd=/boot/initrd.xz vga=F00 lxde autoexec=xconf;telinit~4 changes=/porteus/
-APPEND initrd=/boot/initrd.xz vga=F00 lxde autoexec=xconf;telinit~4 changes=/porteus/ cp2ram
+APPEND initrd=/boot/initrd.xz vga=F00 lxde autoexec=xconf;telinit~4 changes=/porteus/ copy2ram
 TEXT HELP
     Run the lightweight Byzantium
     desktop (LXDE).
@@ -71,7 +71,7 @@ TEXT HELP
     or written to storage.
 ENDTEXT
 
-# Commented out because we're hardcoding cp2ram in this release.
+# Commented out because we're hardcoding copy2ram in this release.
 #LABEL cp2ram
 #MENU LABEL Copy To RAM
 #KERNEL /boot/vmlinuz
@@ -87,7 +87,7 @@ LABEL startx
 MENU LABEL VESA mode
 KERNEL /boot/vmlinuz
 #APPEND initrd=/boot/initrd.xz autoexec=telinit~4 changes=/porteus/
-APPEND initrd=/boot/initrd.xz autoexec=telinit~4 changes=/porteus/ cp2ram
+APPEND initrd=/boot/initrd.xz autoexec=telinit~4 changes=/porteus/ copy2ram
 TEXT HELP
     Run Byzantium's KDE desktop but
     don't autoconfigure the graphics
