--- a/porteus/etherpad-lite/settings.json
+++ b/porteus/etherpad-lite/settings.json
@@ -5,19 +5,20 @@
 */
 {
   //Ip and port which etherpad should bind at
-  //"ip": "127.0.0.1",
+  //"ip": "0.0.0.0",
   "port" : 9001,
   
-  //The Type of the database. You can choose between sqlite and mysql
+  //The Type of the database. You can choose between dirty, sqlite and mysql
+  //You should use mysql or sqlite for anything else than testing or development
   //"dbType" : "dirty",
   "dbType" : "mysql",
-  
+
   //the database specific settings
   //"dbSettings" : {
-  //                "filename" : "../var/dirty.db"
+  //                 "filename" : "../var/dirty.db"
   //               },
                  
-  /* An Example of MySQL Configuration */
+  /* An Example of MySQL Configuration
    "dbType" : "mysql",
    "dbSettings" : {
                     "user"    : "etherpad", 
@@ -25,18 +26,32 @@
                     "password": "byzantiumpad12345", 
                     "database": "etherpad"
                   },
+  */
   
   //the default text of a pad
   "defaultPadText" : "Welcome to Etherpad Lite!\n\nThis pad text is synchronized as you type, so that everyone viewing this page sees the same text. This allows you to collaborate seamlessly on documents!\n\nEtherpad Lite on Github: http:\/\/j.mp/ep-lite\n",
   
+  /* Users must have a session to access pads. This effectively allows only group pads to be accessed. */
+  "requireSession" : false,
+
+  /* Users may edit pads but not create new ones. Pad creation is only via the API. This applies both to group pads and regular pads. */
+  "editOnly" : false,
+  
   /* if true, all css & js will be minified before sending to the client. This will improve the loading performance massivly, 
      but makes it impossible to debug the javascript/css */
   "minify" : true,
+
+  /* How long may clients use served javascript code? Without versioning this
+    is may cause problems during deployment. */
+  "maxAge" : 21600000, // 6 hours
   
   /* This is the path to the Abiword executable. Setting it to null, disables abiword.
      Abiword is needed to enable the import/export of pads*/  
   "abiword" : null,
   
+  /* This setting is used if you need http basic auth */
+  // "httpAuth" : "user:pass",
+
   /* The log level we are using, can be: DEBUG, INFO, WARN, ERROR */
   "loglevel": "ERROR"
 }
