Removed the changes= directives from the KDE, LXDE, and VESA boot modes so that they'll not try to use persistent storage by default.
Turned the 'fresh' boot mode into the persistent storage boot mode.  It's
basically a rewrite.

Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/remaster_iso/porteus.cfg
+++ b/remaster_iso/porteus.cfg
@@ -39,7 +39,7 @@ LABEL xconf
 MENU LABEL Graphical mode (KDE)
 KERNEL /boot/vmlinuz
 #APPEND initrd=/boot/initrd.xz vga=F00 autoexec=xconf;telinit~4 changes=/porteus/
-APPEND initrd=/boot/initrd.xz vga=F00 autoexec=xconf;telinit~4 changes=/porteus/ copy2ram
+APPEND initrd=/boot/initrd.xz vga=F00 autoexec=xconf;telinit~4 copy2ram
 TEXT HELP
     Run the default Byzantium
     desktop.  Try to autoconfigure
@@ -51,24 +51,25 @@ LABEL lxde
 MENU LABEL Graphical mode (LXDE)
 KERNEL /boot/vmlinuz
 #APPEND initrd=/boot/initrd.xz vga=F00 lxde autoexec=xconf;telinit~4 changes=/porteus/
-APPEND initrd=/boot/initrd.xz vga=F00 lxde autoexec=xconf;telinit~4 changes=/porteus/ copy2ram
+APPEND initrd=/boot/initrd.xz vga=F00 lxde autoexec=xconf;telinit~4 copy2ram
 TEXT HELP
     Run the lightweight Byzantium
     desktop (LXDE).
 ENDTEXT
 
-LABEL fresh
-MENU LABEL Always Fresh
+LABEL persistent
+MENU LABEL Persistent Storage
 KERNEL /boot/vmlinuz
-APPEND initrd=/boot/initrd.xz nomagic autoexec=xconf;telinit~4
+#APPEND initrd=/boot/initrd.xz nomagic autoexec=xconf;telinit~4
+APPEND initrd=/boot/initrd.xz vga=F00 autoexec=xconf;telinit~4 changes=/porteus/
 TEXT HELP
-    Normally Byzantium saves all changes
-    to the /porteus/changes/ directory
-    on the boot media (if writable)
-    and restores them at next boot.
-    Use this option to boot a node
-    where changes are not read from
-    or written to storage.
+    Right now Byzantium does not save
+    any changes to make it easier to
+    boot and test a node.  This option
+    will save all changes to the
+    directory /porteus/changes/ on the
+    boot media if writable and restores
+    them the next time it's booted.
 ENDTEXT
 
 # Commented out because we're hardcoding copy2ram in this release.
@@ -87,7 +88,7 @@ LABEL startx
 MENU LABEL VESA mode
 KERNEL /boot/vmlinuz
 #APPEND initrd=/boot/initrd.xz autoexec=telinit~4 changes=/porteus/
-APPEND initrd=/boot/initrd.xz autoexec=telinit~4 changes=/porteus/ copy2ram
+APPEND initrd=/boot/initrd.xz autoexec=telinit~4 copy2ram
 TEXT HELP
     Run Byzantium's KDE desktop but
     don't autoconfigure the graphics
