These proxy rules work for Etherpad-Lite as required.  The problem seems to have something to do with Firefox and self-signed certificates, in particular accepting them on a persistent basis while regenerating them on boot.  What's the name of the law that states that you'll discover the fix moments after you post to a mailing list asking for help?
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/apache/etc/httpd/extra/httpd-ssl.conf
+++ b/porteus/apache/etc/httpd/extra/httpd-ssl.conf
@@ -231,9 +231,9 @@ CustomLog "/var/log/httpd/ssl_request_log" \
 <IfModule mod_proxy.c>
 	ProxyVia On
 	ProxyRequests Off
-	ProxyPass /pad http://localhost:9001/
-	ProxyPassReverse /pad http://localhost:9001/
-	ProxyPreserveHost on
+	ProxyPass /pad/ http://localhost:9001/
+	ProxyPassReverse /pad/ http://localhost:9001/
+	ProxyPreserveHost On
 	<Proxy *>
 		Options FollowSymLinks MultiViews
 		AllowOverride All
