Added proxy lines for Qwebirc.  Retested both Etherpad-Lite and Qwebirc, and it seems to work.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/apache/etc/httpd/extra/httpd-ssl.conf
+++ b/porteus/apache/etc/httpd/extra/httpd-ssl.conf
@@ -233,6 +233,8 @@ CustomLog "/var/log/httpd/ssl_request_log" \
 	ProxyRequests Off
 	ProxyPass /pad/ http://localhost:9001/
 	ProxyPassReverse /pad/ http://localhost:9001/
+	ProxyPass /chat/ http://localhost:9090/
+	ProxyPassReverse /chat/ http://localhost:9090/
 	ProxyPreserveHost On
 	<Proxy *>
 		Options FollowSymLinks MultiViews
