Added /cgi-bin/services.py to the list of possible directory indices Apache can serve.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/apache/etc/httpd/httpd.conf
+++ b/porteus/apache/etc/httpd/httpd.conf
@@ -228,7 +228,7 @@ DocumentRoot "/srv/httpd/htdocs"
 # is requested.
 #
 <IfModule dir_module>
-    DirectoryIndex index.html index.php
+    DirectoryIndex /cgi-bin/services.py index.html index.php
 </IfModule>
 
 #
