Added HTTPS proxying support for Etherpad-Lite.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/apache/etc/httpd/extra/httpd-ssl.conf
+++ b/porteus/apache/etc/httpd/extra/httpd-ssl.conf
@@ -228,4 +228,18 @@ BrowserMatch ".*MSIE.*" \
 CustomLog "/var/log/httpd/ssl_request_log" \
           "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
 
-</VirtualHost>                                  
+<IfModule mod_proxy.c>
+	ProxyVia On
+	ProxyRequests Off
+	ProxyPass /pad http://localhost:9001/
+	ProxyPassReverse /pad http://localhost:9001/
+	ProxyPreserveHost on
+	<Proxy *>
+		Options FollowSymLinks MultiViews
+		AllowOverride All
+		Order allow,deny
+		allow from all
+	</Proxy>
+</IfModule>
+
+</VirtualHost>
