Moved the Apache proxy configuration directives out of httpd-ssl.conf into httpd.conf.  This fixes a subtle bug in which apps exposed with the ProxyPass and ProxyPassReverse directives within the context of the HTTPS virtual host can only be reached via HTTPS.  This is nice but it's not a good idea at this time to expect all possible clients to be SSL/TLS capable.
Interestingly, this bug wasn't in Apache but in the system service directory
due to how web browsers make assumptions about the protocol to contact
something over based upon how they were themselves contacted.  To put it
another way, when you view the service directory over HTTP, and the services
listed are only accessible over HTTPS due to virtual hosting directives,
there's a problem.

Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/apache/etc/httpd/httpd.conf
+++ b/porteus/apache/etc/httpd/httpd.conf
@@ -481,3 +481,21 @@ Include /etc/httpd/mod_php.conf
 #LoadModule dav_svn_module lib/httpd/modules/mod_dav_svn.so
 #LoadModule authz_svn_module lib/httpd/modules/mod_authz_svn.so
 
+# Expose web applications to the users through Apache.  By doing this here we
+# take advantage of HTTPS as well as HTTP.
+<IfModule mod_proxy.c>
+	ProxyVia On
+	ProxyRequests Off
+	ProxyPass /pad/ http://localhost:9001/
+	ProxyPassReverse /pad/ http://localhost:9001/
+	ProxyPass /chat/ http://localhost:9090/
+	ProxyPassReverse /chat/ http://localhost:9090/
+	ProxyPreserveHost On
+	<Proxy *>
+		Options FollowSymLinks MultiViews
+		AllowOverride All
+		Order allow,deny
+		allow from all
+	</Proxy>
+</IfModule>
+
