Etherpad-Lite is now configured to listen on all IP addresses.  Cut out an extra "MySQL" configuration directive.  Before, Etherpad-Lite wasn't starting up properly on our test nodes.  Now, it should, these changes were made and tested on a test node and ported over.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/etherpad-lite/settings.json
+++ b/porteus/etherpad-lite/settings.json
@@ -5,13 +5,13 @@
 */
 {
   //Ip and port which etherpad should bind at
-  //"ip": "0.0.0.0",
+  "ip": "0.0.0.0",
   "port" : 9001,
   
   //The Type of the database. You can choose between dirty, sqlite and mysql
   //You should use mysql or sqlite for anything else than testing or development
   //"dbType" : "dirty",
-  "dbType" : "mysql",
+  //"dbType" : "mysql",
 
   //the database specific settings
   //"dbSettings" : {
