Change control panel shortcut to always use Firefox.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/home/guest/Desktop/Control Panel.desktop
+++ b/porteus/home/guest/Desktop/Control Panel.desktop
@@ -3,4 +3,4 @@ Icon=/usr/share/pixmaps/porteus/byzantium-icon.png
 Name=Control Panel
 Name[en_US]=Control Panel
 Type=Link
-URL[$e]=http://localhost:8080/
+URL[$e]=firefox http://localhost:8080/
