Changed the control panel's desktop descriptor so that it actually works now.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/home/guest/Desktop/Control Panel.desktop
+++ b/porteus/home/guest/Desktop/Control Panel.desktop
@@ -2,5 +2,5 @@
 Icon=/usr/share/pixmaps/porteus/byzantium-icon.png
 Name=Control Panel
 Name[en_US]=Control Panel
-Type=Link
-URL[$e]=firefox http://localhost:8080/
+Type=Application
+Exec=firefox http://localhost:8080/
