avahi related *tools* tested an working. need to integrate into respective systems still. ADDED pybonjour module dependancy (NEED TO RESOLVE STILL)

--- a/control_panel/etc/byzantium/services/avahi/template.service
+++ b/control_panel/etc/byzantium/services/avahi/template.service
@@ -1,9 +1,11 @@
 <?xml version="1.0" standalone='no'?>
 <!DOCTYPE service-group SYSTEM "avahi-service.dtd">
 <service-group>
-	<name>%(desciption)s</name>
+	<name>%(name)s</name>
 	<service>
-		<type>%(type)s</type>
+		<type>%(stype)s</type>
+		<subtype>%(subtype)s</subtype>
 		<port>%(port)d</port>
+		%(text)s
 	</service>
 </service-group>
