Generalized that fix to run whenever /etc/resolv.conf is updated because the existing code doesn't exit(), so making it run in every case is trivial.
Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/porteus/dhcpcd/lib/dhcpcd/dhcpcd-hooks/20-resolv.conf
+++ b/porteus/dhcpcd/lib/dhcpcd/dhcpcd-hooks/20-resolv.conf
@@ -124,14 +124,6 @@ remove_resolv_conf()
 			rm -f "$resolv_conf_dir/$interface"
 		fi
 		build_resolv_conf
-
-		# If avahi-daemon is running, bounce it to un-propagate the IP
-		# addresses of the gateway's DNSes because the gateway link
-		# went away.
-		if [ -f /var/run/avahi-daemon/pid ]; then
-			echo "Restarting avahi-daemon to un-propagate IPs of DNSes from gateway."
-			/usr/sbin/avahi-daemon -r
-			fi
 	fi
 }
 
@@ -140,3 +132,10 @@ if $if_up; then
 elif $if_down; then
 	remove_resolv_conf
 fi
+
+# If avahi-daemon is running, bounce it to (un-)propagate the IP addresses of
+# the gateway's DNSes because the gateway link's status changed.
+if [ -f /var/run/avahi-daemon/pid ]; then
+    echo "Restarting avahi-daemon to un-propagate IPs of DNSes from gateway."
+    /usr/sbin/avahi-daemon -r
+    fi
