Not using copy2ram by default for this release

--- a/remaster_iso/porteus.cfg
+++ b/remaster_iso/porteus.cfg
@@ -38,8 +38,7 @@ MENU VSHIFT 5
 LABEL xconf
 MENU LABEL Graphical mode (KDE)
 KERNEL /boot/vmlinuz
-#APPEND initrd=/boot/initrd.xz vga=F00 autoexec=xconf;telinit~4 changes=/porteus/
-APPEND initrd=/boot/initrd.xz vga=F00 autoexec=xconf;telinit~4 copy2ram
+APPEND initrd=/boot/initrd.xz vga=F00 autoexec=xconf;telinit~4 changes=/porteus/
 TEXT HELP
     Run the default Byzantium
     desktop.  Try to autoconfigure
@@ -50,45 +49,27 @@ ENDTEXT
 LABEL lxde
 MENU LABEL Graphical mode (LXDE)
 KERNEL /boot/vmlinuz
-#APPEND initrd=/boot/initrd.xz vga=F00 lxde autoexec=xconf;telinit~4 changes=/porteus/
-APPEND initrd=/boot/initrd.xz vga=F00 lxde autoexec=xconf;telinit~4 copy2ram
+APPEND initrd=/boot/initrd.xz vga=F00 lxde autoexec=xconf;telinit~4 changes=/porteus/
 TEXT HELP
     Run the lightweight Byzantium
     desktop (LXDE).
 ENDTEXT
 
-LABEL persistent
-MENU LABEL Persistent Storage
+LABEL cp2ram
+MENU LABEL Copy To RAM
 KERNEL /boot/vmlinuz
-#APPEND initrd=/boot/initrd.xz nomagic autoexec=xconf;telinit~4
-APPEND initrd=/boot/initrd.xz vga=F00 autoexec=xconf;telinit~4 changes=/porteus/
+APPEND initrd=/boot/initrd.xz vga=F00 copy2ram autoexec=xconf;telinit~4
 TEXT HELP
-    Right now Byzantium does not save
-    any changes to make it easier to
-    boot and test a node.  This option
-    will save all changes to the
-    directory /porteus/changes/ on the
-    boot media if writable and restores
-    them the next time it's booted.
+    Run Byzantium but first copy
+    everything to RAM to get a
+    huge speed increase (needs
+    >300MB RAM).
 ENDTEXT
-
-# Commented out because we're hardcoding copy2ram in this release.
-#LABEL cp2ram
-#MENU LABEL Copy To RAM
-#KERNEL /boot/vmlinuz
-#APPEND initrd=/boot/initrd.xz vga=F00 copy2ram autoexec=xconf;telinit~4
-#TEXT HELP
-#    Run Byzantium but first copy
-#    everything to RAM to get a
-#    huge speed increase (needs
-#    >300MB RAM).
-#ENDTEXT
 
 LABEL startx
 MENU LABEL VESA mode
 KERNEL /boot/vmlinuz
-#APPEND initrd=/boot/initrd.xz autoexec=telinit~4 changes=/porteus/
-APPEND initrd=/boot/initrd.xz autoexec=telinit~4 copy2ram
+APPEND initrd=/boot/initrd.xz autoexec=telinit~4 changes=/porteus/
 TEXT HELP
     Run Byzantium's KDE desktop but
     don't autoconfigure the graphics
